crates/aranya-policy-lang/tests/data/match_expression/empty_match.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 3 column 1:  --> 3:1
  |
3 | }
  | ^---
  |
  = expected add, subtract, greater_than, less_than, greater_than_or_equal, less_than_or_equal, equal, not_equal, and, or, dot, substruct, cast, or is
